    Changed: Support for nested MySQL transactions is now emulated using named transaction savepoints
    Fixed: Cannot add DKIM/DMARC DNS resource records
    Fixed: Customer must be allowed to set custom TTL value for any DNS resource record
    Fixed: Customer must be allowed to set `name` field of any DNS resource record
    Fixed: IDNs are shown in IDNA form in SSL certificate management interface
    Fixed: iMSCP_Update_Database::addIndex() doesn't allows to set index length
    Removed: User deletion confirmation pages (admin/reseller level)
    Rewritten: FTP chooser interface to avoid usage of iframe

INSTALLER
    Added: Check for maximum supported PHP/Perl versions
    Added: Check to prevent downgrade attempts (when DB schema change is involved)
    Added: Conditional statement feature for install.xml files (copy_config items only)
    Fixed: Debug and verbose modes must be set early
    Fixed: Don't die on misconfigured server hostname. Just ask for a valid hostname instead
    Fixed: libmariadbclient18 package not provided in Debian Stretch (testing) repository
    Fixed: Plugin setup listeners are no longer registered (regression fix)
    Moved: Master administrator questions and setup routines into the Package::FrontEnd::Installer package
    Renamed: imscp-setup script to imscp-reconfigure
    Transitional: Enforce PHP5 variant under Debian Stretch (testing) and Ubuntu 16.04 (Xenial Xerus)

PLUGINS
    Fixed: Plugin configuration not synced when triggering plugin list update (when a plugin is in error state)
    Fixed: The 'change' action must be automatically triggered on plugin list update, even for plugins with error state
    Fixed: Wrong events triggered when a plugin is being locked/unlocked
    Updated: API version to 1.0.4

SERVERS
    Added: Own i-MSCP logrorate configuration file for ProFTPD (xferlog file don't need to be rotated)
    Added: Own i-MSCP ProFTPD sysvinit script to solve #IP-1402 - (Wheezy, Precise, Trusty)